--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cdbreact": "^1.5.19",
+    "chart.js": "^4.4.8",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "yup": "^1.6.1"
